# dml-exp

./: README.md
DML-EXP/dml/evaluation/src/computation/: CMakeLists.txt  tensor_merge.cpp  tensor_merge.h  testcase.cpp
DML-EXP/dml/evaluation/src/computation/example/: example.cc  run.sh
DML-EXP/dml/evaluation/src/datasystem/: CMakeLists.txt
DML-EXP/dml/evaluation/src/datasystem/example/: test_datasystem.cpp
DML-EXP/dml/evaluation/src/frpc/: CMakeLists.txt  frpcserver.cmake  msgstub.h  rpc.kdev4  rpchead.cpp  rpchead.h  rpctcpserver.cpp  tcpclient.cpp  tcpclient.h  tcpserver.cpp  tcpserver.h  tsttcp.cpp  tsttcpserver.cpp
DML-EXP/dml/evaluation/src/main/: main.cpp  test.cpp
DML-EXP/dml/evaluation/src/network/: server.cpp  server.h
DML-EXP/dml/evaluation/src/topology/: CMakeLists.txt  topology.h
DML-EXP/dml/evaluation/src/utils/: ATimer.h  CMakeLists.txt  blockingQueue.h  thread_pool.hpp  utils.h
DML-EXP/dml/src/: Makefile  client.cc  main.cc  mthread.cc  server.cc
DML-EXP/parallel-ssh/: hosts.txt  master.sh  run.sh
dml/evaluation/src/: CMakeLists.txt
dml/evaluation/src/computation/: CMakeLists.txt  aggregator.cpp  aggregator.h  tensor_merge.cpp  tensor_merge.cu  tensor_merge.h
dml/evaluation/src/computation/example/: main.cu
dml/evaluation/src/datasystem/: CMakeLists.txt  data_generator.cpp  data_generator.h
dml/evaluation/src/frpc/: msgstub.cpp  rpctcpserver.h
dml/evaluation/src/main/: main.cpp  test.cpp  test.h
dml/evaluation/src/network/: CMakeLists.txt  client.cpp  client.h  coordinator.cpp  coordinator.h  server.cpp  server.h  tower.cpp  tower.h
dml/evaluation/src/network/epoll/: Makefile  epoll_client.c  epoll_server.c
dml/evaluation/src/network/example/: example_client.cpp  example_server.cpp  tcp_benchmark copy.cpp  tcp_benchmark.cpp
dml/evaluation/src/network/rdma/: NetUtil.hpp  RDMABase.cpp  RDMABase.h  RDMABenchmark.cpp  RDMAClient.cpp  RDMAClient.h  RDMAServer.cpp  RDMAServer.h  README.txt  message.hpp
dml/evaluation/src/network/tcp/: server.cpp
dml/evaluation/src/rdma/RDMA-EXAMPLE-master 2/: README.md
dml/evaluation/src/rdma/rdma_v6.1/: Makefile  RDMABase.cpp  RDMABase.h  RDMABenchmark.cpp  RDMAClient.cpp  RDMAClient.h  RDMAServer.cpp  RDMAServer.h  README.txt
dml/evaluation/src/rdma/rdma_v6.2/: Makefile  RDMABase.h  RDMAClient.cpp  RDMAServer.cpp  test.cpp
dml/evaluation/src/rdma/rdma_v6.2-04.11/: RDMABase.cpp  RDMABase.h  RDMABenchmark.cpp  RDMAClient.cpp  RDMAServer.cpp  RDMAServer.h  README.txt
dml/evaluation/src/rdma/rdma_v6.2-04.12/: RDMAClient.h  RDMAServer.cpp  README.txt
dml/evaluation/src/rdma/rdma_v6.2-04.13/: RDMABase.cpp  RDMABase.h  RDMAClient.cpp  RDMAServer.cpp  test.cpp
dml/evaluation/src/rdma/rdma_v6.2-04.15/: RDMABase.h  RDMAClient.cpp  RDMAServer.cpp  README.txt
dml/evaluation/src/rdma/rdma_v6.2-v4.16/: RDMABase.cpp  RDMABase.h  RDMABenchmark.cpp  RDMAClient.cpp  RDMAClient.h  test.cpp
dml/evaluation/src/rdma/rdma_v6.3/: RDMABase.cpp  RDMABase.h  RDMAClient.cpp  RDMAServer.cpp  README.txt
dml/evaluation/src/topology/: topo.txt  topology.cpp  topology.h
dml/evaluation/src/topology/example/: example.cpp
dml/evaluation/src/utils/: NetUtil.hpp  SPSCQueue.h  atomicops.h  blockingQueue.h  lockfreeQueue.h  logging.h  readerwriterqueue.h  thread_pool.hpp  utils.cpp  utils.h
dml/evaluation/src/utils/example/: Makefile  main.cpp
